objects/GEMS_Eligibility_Production__c.object
<CustomObject>
    <fields>
        <fullName>Auth_to_Comp__c</fullName>
        <label>Auth to Comp</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Auth_to_Valid__c</fullName>
        <label>Auth to Valid</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Eligibility_AEP_File_Details__c</fullName>
        <label>Eligibility AEP File Details</label>
        <referenceTo>GEMS_Eligibility_AEP_File_Details__c</referenceTo>
        <relationshipLabel>Eligibility Production</relationshipLabel>
        <relationshipName>Eligibility_Production</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>GEMS_PROD_File_Number__c</fullName>
        <label>PROD File Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_First_File__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is First File</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Load__c</fullName>
        <label>Load</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Receipt__c</fullName>
        <label>Receipt</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <label>Target</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Accept__c</fullName>
        <label>Total Accept</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Reject__c</fullName>
        <label>Total Reject</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Eligibility Production</label>
    <nameField>
        <displayFormat>PF-{00000}</displayFormat>
        <label>Reference#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Eligibility Production</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>